@@ -1,5 +1,5 @@
 #
-# "$Id: mime.types,v 1.14 2001/01/11 21:58:50 mike Exp $"
+# "$Id: mime.types,v 1.15 2001/02/02 19:38:45 mike Exp $"
 #
 #   MIME types file for the Common UNIX Printing System (CUPS).
 #
@@ -71,9 +71,12 @@
 application/msword		doc string(0,<D0CF11E0A1B11AE1>)
 application/pdf			pdf string(0,%PDF)
 application/postscript		ai eps ps string(0,%!) string(0,<04>%!)
-application/vnd.hp-HPGL		hpgl string(0,<1b>%) string(0,<1b>&)\
-				string(0,<1b>E) string(0,<201b>)\
-				string(0,BP;) string(0,IN;) string(0,DF;) 
+application/vnd.hp-HPGL		hpgl string(0,<1B>&)\
+				string(0,<1B>E<1B>%0B) string(0,<201B>)\
+				string(0,BP;) string(0,IN;) string(0,DF;) \
+				(string(0,<1B>%-12345X) + \
+				 (contains(9,512,"LANGUAGE=HPGL") \
+				  contains(9,512,"LANGUAGE = HPGL")))
 
 ########################################################################
 #
@@ -129,10 +132,10 @@ application/vnd.cups-postscript	string(0,<1B>%-12345X) + \
 				(contains(9,512,"LANGUAGE=POSTSCRIPT") \
 				 contains(9,512,"LANGUAGE = POSTSCRIPT"))
 application/vnd.cups-raster	string(0,"RaSt") string(0,"tSaR")
-application/vnd.cups-raw	string(0,<1B>E) \
+application/vnd.cups-raw	(string(0,<1B>E) + !string(2,<1B>%0B)) \
 				string(0,<1B>@) \
 				(string(0,<1B>%-12345X) + \
-				 (contains(9,512,"LANGUAGE=PCL")) \
+				 (contains(9,512,"LANGUAGE=PCL") \
 				  contains(9,512,"LANGUAGE = PCL")))
 
 ########################################################################
@@ -147,5 +150,5 @@ application/vnd.cups-raw	string(0,<1B>E) \
 #application/octet-stream
 
 #
-# End of "$Id: mime.types,v 1.14 2001/01/11 21:58:50 mike Exp $".
+# End of "$Id: mime.types,v 1.15 2001/02/02 19:38:45 mike Exp $".
 #
